# learn_crewai

basic_crewai/: README.md  pyproject.toml
basic_crewai/src/basic_crewai/: crew.py  main.py
chat_bot/: pyproject.toml
chat_bot/src/chat_bot/: crew.py  main.py
chat_bot/src/chat_bot/config/: agents.yaml  tasks.yaml
marketing_crewai/: README.md  improvements.md  output.md  pyproject.toml  trained_agents_data.pkl  training_data.pkl
marketing_crewai/src/marketing_crewai/: crew.py  main.py
marketing_crewai/src/marketing_crewai/config/: agents.yaml  tasks.yaml
numbers_api/: README.md  pyproject.toml
numbers_api/src/numbers_api/: crew.py  main.py
numbers_api/src/numbers_api/config/: agents.yaml  tasks.yaml
numbers_api/src/numbers_api/tools/: numbers_api_tool.py
react_agent/: agent.ipynb
sample_flow/: README.md  poem.txt  pyproject.toml
sample_flow/src/sample_flow/: main.py
